moved requirements and removed DBR 7 testing

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -28,10 +28,9 @@ basepython =
     dbr113: py39
     dbr104: py38
     dbr91: py38
-    dbr73: py37
 deps =
-    -rtests/requirements/{envname}.txt
-    -rtests/requirements/dev.txt
+    -rrequirements/{envname}.txt
+    -rrequirements/dev.txt
     coverage>=7,<8
 
 commands =
