fixed tox.ini and added pyenv to test.yml

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -32,19 +32,10 @@ deps =
     -rrequirements/{envname}.txt
     -rrequirements/dev.txt
     coverage>=7,<8
-
 commands =
     coverage --version
     coverage run -m unittest discover -s tests -p '*_tests.py'
 
-[testenv:format]
-description = run formatters
-skipsdist = true
-skip_install = true
-deps =
-    black
-commands =
-    black {toxinidir}
 
 [testenv:lint]
 description = run linters
@@ -65,7 +56,7 @@ deps =
     mypy>=1,<2
     pandas-stubs>=2,<3
     types-pytz>=2023,<2024
-    -rtests/requirements/dbr133.txt
+    -rrequirements/dbr133.txt
 commands =
     mypy {toxinidir}/tempo
 
