--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,69 +1,50 @@
 name: build
 
 on:
-  push:
-    branches: [ '*' ]
   pull_request:
     branches: [ 'master' ]
 
 jobs:
-  black-linting:
+  tox:
     runs-on: ubuntu-latest
-    name: Black Lint
-    steps:
-      - uses: actions/checkout@v2
-      - uses: psf/black@stable
-        with:
-          options: "--check --verbose"
-          src: "./python"
-          version: "23.3.0"
-  flake8-lint:
-    runs-on: ubuntu-latest
-    name: Flake8 Lint
-    steps:
-      - name: Check out source repository
-        uses: actions/checkout@v2
-      - name: Set up Python environment
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: flake8 Lint
-        uses: py-actions/flake8@v2
-        with:
-          args: "--config python/.flake8"
-          path: "./python"
-  type-checks:
-    runs-on: ubuntu-latest
-    name: Type Checks
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Type check
-        working-directory: ./python
-        run: |
-          pip install tox
-          tox -e type-check
-  test:
-    name: Build and Test Module
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-    env:
-      OS: ${{ matrix.os }}
-      PYTHON: '3.9'
+        env:
+          - dbr142
+          - dbr133
+          - dbr122
+          - dbr113
+          - dbr104
+          - dbr91
+
     steps:
-    - uses: actions/checkout@master
-    - name: Setup Python
-      uses: actions/setup-python@master
-      with:
-        python-version: 3.9
-    - name: Set Spark env
+    - uses: actions/checkout@v3
+
+    - name: Install pyenv
       run: |
-        export SPARK_LOCAL_IP=127.0.0.1
-        export SPARK_SUBMIT_OPTS="--illegal-access=permit -Dio.netty.tryReflectionSetAccessible=true"
+        git clone https://github.com/pyenv/pyenv.git ~/.pyenv
+        echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
+        echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
+        echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+        source ~/.bashrc
+        
+    - name: Install Python versions
+      run: |  
+        pyenv install 3.8 3.9 3.10
+
+    - name: Verify Python installations
+      run: |
+        python3.8 --version
+        python3.9 --version  
+        python3.10 --version
+
+    - name: Install tox
+      run: pip install tox
+
+    - name: Run tox
+      working-directory: ./python
+      run: tox -e ${{ matrix.env }}
+
     - name: Generate coverage report
       working-directory: ./python
       run: |
