--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install pyenv
         run: |
-          git clone https://github.com/pyenv/pyenv.git ~/.pyenv
+          curl https://pyenv.run | bash
           echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
-          echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
+          echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
           echo 'eval "$(pyenv init -)"' >> ~/.bashrc
-          source ~/.bashrc     
       - name: Install Python versions
         run: |  
           pyenv install 3.8 3.9 3.10
