--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
           echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
           echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
           echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+          exec "$SHELL"
       - name: Install Python versions
         run: |  
           pyenv install 3.8 3.9 3.10
