--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,29 +8,32 @@ on:
     branches: ['*']
 
 jobs:
-  install_python:
+  install_python_with_pyenv:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install pyenv
-        run: |
-          curl https://pyenv.run | bash
-          echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
-          echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
-          echo 'eval "$(pyenv init -)"' >> ~/.bashrc
-          echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.profile
-          echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.profile
-          echo 'eval "$(pyenv init -)"' >> ~/.profile
-          echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile
-          echo '[[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
-          echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
-          pyenv install 3.8 3.9 3.10
-          echo "installation complete"
-      # - name: Verify Python installations
-      #   run: |
-      #     python3.8 --version
-      #     python3.9 --version  
-      #     python3.10 --version
+    - name: Install python build tools
+      shell: bash
+      # Ref: https://github.com/pyenv/pyenv/wiki#suggested-build-environment
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install -y make build-essential libssl-dev zlib1g-dev \
+        libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm \
+        libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev ffmpeg
+    - name: Install pyenv
+      shell: bash
+      run: |
+        git clone https://github.com/pyenv/pyenv.git "$HOME/.pyenv"
+    - name: Setup environment variables
+      shell: bash
+      run: |
+        PYENV_ROOT="$HOME/.pyenv"
+        PYENV_BIN="$PYENV_ROOT/bin"
+        echo "$PYENV_BIN" >> $GITHUB_PATH
+        echo "PYENV_ROOT=$PYENV_ROOT" >> $GITHUB_ENV
+    - name: Check pyenv version
+      shell: bash
+      run: |
+        pyenv --version
 
   tox:
     needs: install_python
