tox type checking now works

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -55,10 +55,10 @@ skip_install = true
 deps =
     mypy>=1,<2
     pandas-stubs>=2,<3
-    types-pytz>=2023,<2024
-    -rrequirements/dbr142.txt
+    numpy
+    types-openpyxl
 commands =
-    mypy {toxinidir}/tempo
+    mypy --install-types {toxinidir}/tempo
 
 [testenv:build-dist]
 description = build distribution
