--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,10 @@ jobs:
     steps:
     - uses: actions/setup-python@v4
       with:
-        python-version: ['3.8', '3.9', '3.10'] 
+        python-version: |
+          3.8
+          3.9
+          3.10
     - uses: actions/checkout@v3
     - name: Install tox
       run: pip install tox
