--- a/python/tox.ini
+++ b/python/tox.ini
@@ -14,6 +14,11 @@ envlist =
     dbr{91,104,113,122,133,142}
 skip_missing_interpreters = true
 
+[gh-actions]
+python =
+    3.8: dbr91, dbr104
+    3.9: dbr113, dbr122
+    3.10: dbr133, dbr142
 
 [testenv]
 description = run the tests under {envname}
