--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,26 +17,30 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-tags: true
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: test
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install tox tox-gh-actions
-    - name: Test with tox
-      working-directory: ./python
-      run: tox
-    - name: Generate coverage report
-      working-directory: ./python
-      run: |
-        python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
-        coverage run -m unittest discover -s tests -p '*_tests.py'
-        coverage combine
-        coverage xml
-    - name: Publish test coverage
-      uses: codecov/codecov-action@v3
-      with:
-          fail_ci_if_error: true
-          files: ./python/coverage.xml
+        ls
+        git status
+    # - name: Set up Python ${{ matrix.python-version }}
+    #   uses: actions/setup-python@v4
+    #   with:
+    #     python-version: ${{ matrix.python-version }}
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     python -m pip install tox tox-gh-actions
+    # - name: Test with tox
+    #   working-directory: ./python
+    #   run: tox
+    # - name: Generate coverage report
+    #   working-directory: ./python
+    #   run: |
+    #     python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
+    #     coverage run -m unittest discover -s tests -p '*_tests.py'
+    #     coverage combine
+    #     coverage xml
+    # - name: Publish test coverage
+    #   uses: codecov/codecov-action@v3
+    #   with:
+    #       fail_ci_if_error: true
+    #       files: ./python/coverage.xml
