--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,30 +18,26 @@ jobs:
       with:
         fetch-depth: 0
         fetch-tags: true
-    - name: test
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
       run: |
-        ls
-        git describe --abbrev=0 --tags
-    # - name: Set up Python ${{ matrix.python-version }}
-    #   uses: actions/setup-python@v4
-    #   with:
-    #     python-version: ${{ matrix.python-version }}
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     python -m pip install tox tox-gh-actions
-    # - name: Test with tox
-    #   working-directory: ./python
-    #   run: tox
-    # - name: Generate coverage report
-    #   working-directory: ./python
-    #   run: |
-    #     python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
-    #     coverage run -m unittest discover -s tests -p '*_tests.py'
-    #     coverage combine
-    #     coverage xml
-    # - name: Publish test coverage
-    #   uses: codecov/codecov-action@v3
-    #   with:
-    #       fail_ci_if_error: true
-    #       files: ./python/coverage.xml
+        python -m pip install --upgrade pip
+        python -m pip install tox tox-gh-actions
+    - name: Test with tox
+      working-directory: ./python
+      run: tox
+    - name: Generate coverage report
+      working-directory: ./python
+      run: |
+        python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
+        coverage run -m unittest discover -s tests -p '*_tests.py'
+        coverage combine
+        coverage xml
+    - name: Publish test coverage
+      uses: codecov/codecov-action@v3
+      with:
+          fail_ci_if_error: true
+          files: ./python/coverage.xml
