--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: build
+name: Test
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
     branches: ['*']
 
 jobs:
-  tox:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,16 +26,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
-    - name: Test with tox
+    - name: Execute tox envs
       working-directory: ./python
       run: tox
-    - name: Generate coverage report
-      working-directory: ./python
-      run: |
-        python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
-        coverage run -m unittest discover -s tests -p '*_tests.py'
-        coverage combine
-        coverage xml
     - name: Publish test coverage
       uses: codecov/codecov-action@v3
       with:
