fixed coverage cmds in tox.ini

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -10,6 +10,8 @@ envlist =
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
     dbr{91,104,113,122,133,142}
+    coverage-init
+    coverage-report
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -70,7 +72,7 @@ deps =
 commands =
     python -m build --sdist --wheel {posargs: {toxinidir}}
 
-[testenv:cov-init]
+[testenv:coverage-init]
 setenv =
     COVERAGE_FILE = .coverage
 commands =
