--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,34 +3,10 @@ name: Test
 on:
   pull_request:
     branches: [ 'master' ]
-  # workflow_dispatch:
   push:
     branches: ['*']
 
+
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.8', '3.9', '3.10']
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        fetch-tags: true
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install tox tox-gh-actions
-    - name: Execute tox envs
-      working-directory: ./python
-      run: tox
-    - name: Publish test coverage
-      uses: codecov/codecov-action@v3
-      with:
-          fail_ci_if_error: true
-          files: ./python/coverage.xml
+  ci:
+    uses: ./.github/actions/ci.yml
