--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,12 +7,9 @@ on:
     branches: ['*']
   workflow_dispatch: 
 
-env:
-  OS: ubuntu-latest
-
 jobs:
   lint-and-check:
-    runs-on: ${{ env.OS }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
       with:
@@ -34,7 +31,7 @@ jobs:
       run: tox -e type-check
   
   analyze:
-    runs-on: "${{ env.OS }}"
+    runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
@@ -74,7 +71,7 @@ jobs:
 
   test:
     needs: lint-and-check
-    runs-on: "${{ env.OS }}"
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10']
