fixed tox build env

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -66,8 +66,9 @@ description = build distribution
 skip_install = true
 deps =
     build
+    semver
 commands =
-    python -m build --sdist --wheel {posargs: {toxinidir}}
+    python setup.py clean bdist_wheel
 
 [testenv:coverage-report]
 description = combine coverage data and generate reports
