got tox build-docs working

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -70,6 +70,15 @@ deps =
 commands =
     python setup.py clean bdist_wheel
 
+[testenv:build-docs]
+description = build distribution
+allowlist_externals = make
+deps =
+    -r ../docs/requirements.txt
+    semver
+commands =
+    make --directory ../docs html
+
 [testenv:coverage-report]
 description = combine coverage data and generate reports
 deps = coverage>=7,<8
