--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
         with:
@@ -48,27 +47,37 @@ jobs:
       #     packages_dir: python/dist/
   
   docs:
-    needs: release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          fetch-depth: '0'
-      # - name: Copy Requirements
-      #   uses: canastro/copy-file-action@master
+          python-version: '3.10'
+
+      # - uses: actions/cache@v2
+      #   id: cache
       #   with:
-      #     source: "python/requirements/dbr143.txt"
-      #     target: "docs/requirements.txt"
-      - name: Build HTML
-        uses: ammaraskar/sphinx-action@0.4
-        with:
-          pre-build-command: "apt-get update -y && apt-get install -y git && git config --global --add safe.directory /github/workspace"
+      #     path: ~/.cache/pip
+      #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+      #       ${{ runner.os }}-pip-
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install tox
+
+      - name: Build dist
+        working-directory: ./python
+        run: tox -e build-docs
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
           name: html-docs
           path: docs/_build/html/
+
       # - name: Deploy 🚀
       #   uses: peaceiris/actions-gh-pages@v3
       #   if: $${{ github.ref }} == 'refs/heads/master'
