--- a/python/tox.ini
+++ b/python/tox.ini
@@ -46,7 +46,7 @@ deps =
     flake8
     black
 commands =
-    black --check {toxinidir}/tempo
+    black {posargs} {toxinidir}/tempo
     flake8 --config {toxinidir}/.flake8 {toxinidir}/tempo
 
 [testenv:type-check]
