stupid black version mismatch

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -44,7 +44,7 @@ skipsdist = true
 skip_install = true
 deps =
     flake8
-    black
+    black==24.4.1
 commands =
     black {posargs} {toxinidir}/tempo
     flake8 --config {toxinidir}/.flake8 {toxinidir}/tempo
