--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
 sphinx-autobuild==2021.3.14
 sphinx-copybutton==0.5.1
-Sphinx==4.5.0
+sphinx==4.5.0
 sphinx-design==0.2.0
 sphinx-panels==0.6.0
+sphinxcontrib-applehelp==1.0.4
 furo==2022.9.29
