switched to newer tox gh plugin

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,11 +11,11 @@ envlist =
     coverage-report
 skip_missing_interpreters = true
 
-[gh-actions]
+[gh]
 python =
-    3.8: dbr91, dbr104
-    3.9: dbr113, dbr122
-    3.10: dbr133, dbr143
+    3.8 = dbr91, dbr104
+    3.9 = dbr113, dbr122
+    3.10 = dbr133, dbr143
 
 [testenv]
 description = run the tests under {envname}
