--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -87,7 +87,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox tox-gh-actions
+        python -m pip install tox tox-gh
     - name: Execute tox envs
       working-directory: ./python
       run: tox
