--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -74,23 +74,35 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        config:
+          - py: '3.8'
+            dbr: dbr91
+          - py: '3.8'
+            dbr: dbr104
+          - py: '3.9'
+            dbr: dbr113
+          - py: '3.9'
+            dbr: dbr122
+          - py: '3.10'
+            dbr: dbr133
+          - py: '3.10'
+            dbr: dbr143
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
         fetch-tags: true
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.config.py }}
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.config.py }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox tox-gh
+        python -m pip install tox
     - name: Execute tox envs
       working-directory: ./python
-      run: tox
+      run: tox -e ${{ matrix.config.dbr }} coverage-report
     - name: Publish test coverage
       uses: codecov/codecov-action@v4
       with:
