--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
-name: release
+name: build-release
 
 on:
+  pull_request:
+    types: [opened, synchronize]
   push:
-    # tags:
-    #   - 'v*' # only release a versioned tag, such as v.X.Y.Z
     branches: ['*']
 
 jobs:
@@ -20,15 +20,6 @@ jobs:
         with:
           python-version: '3.10'
 
-      # - uses: actions/cache@v2
-      #   id: cache
-      #   with:
-      #     path: ~/.cache/pip
-      #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      #       ${{ runner.os }}-pip-
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -38,13 +29,13 @@ jobs:
         working-directory: ./python
         run: tox -e build-dist
 
-      # - name: Publish a Python distribution to PyPI
-      #   uses: pypa/gh-action-pypi-publish@release/v1
-      #   if: $${{ github.ref }} == 'refs/heads/master'
-      #   with:
-      #     user: __token__
-      #     password: ${{ secrets.LABS_PYPI_TOKEN }}
-      #     packages_dir: python/dist/
+      - name: Publish a Python distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          user: __token__
+          password: ${{ secrets.LABS_PYPI_TOKEN }}
+          packages_dir: python/dist/
   
   docs:
     runs-on: ubuntu-latest
@@ -58,15 +49,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-
-      # - uses: actions/cache@v2
-      #   id: cache
-      #   with:
-      #     path: ~/.cache/pip
-      #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      #       ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
@@ -83,9 +65,9 @@ jobs:
           name: html-docs
           path: docs/_build/html/
 
-      # - name: Deploy 🚀
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   if: $${{ github.ref }} == 'refs/heads/master'
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: docs/_build/html
+      - name: Deploy 🚀
+        uses: peaceiris/actions-gh-pages@v3
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/_build/html
