--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -102,7 +102,7 @@ jobs:
         python -m pip install tox
     - name: Execute tox envs
       working-directory: ./python
-      run: tox -e ${{ matrix.config.dbr }} coverage-report
+      run: tox -e ${{ matrix.config.dbr }},coverage-report
     - name: Publish test coverage
       uses: codecov/codecov-action@v4
       with:
