--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize]
   push:
-    branches: ['*']
+    branches: ['*'] # FIXME
   workflow_dispatch: 
 
 jobs:
