--- a/python/tox.ini
+++ b/python/tox.ini
@@ -2,8 +2,7 @@
 requires =
     tox>4,<5
     virtualenv>20,<21
-    wheel>=0.38,<1
-isolated_build = true
+isolated_build = True
 envlist =
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
@@ -24,10 +23,40 @@ basepython =
     dbr113: py39
     dbr104: py38
 deps =
-    -rrequirements/{envname}.txt
     -rrequirements/dev.txt
-    coverage>=7,<8
+    -rrequirements/{envname}.txt
 commands =
+    coverage erase
+    coverage run -m unittest discover -s tests -p '*_tests.py'
+
+[testenv:dbr104]
+deps =
+    -rrequirements/dev.txt
+commands =
+    # Get the architecture of the system
+    sys_arch=$(uname -m)
+    echo "System Architecture: $sys_arch"
+    # Check if the architecture is arm64
+    if [ "sys_arch" = "arm64" ]; then
+        pip install -r requirements/{envname}_arm64.txt
+        ;https://github.com/apache/arrow/blob/release-4.0.0/python/requirements-wheel-build.txt
+        ;Building pyarrow with no dependencies because NumPy 1.16.5 is not supported on
+        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
+        ;1.20 to avoid the issue, and is compatible with pyarrow 4.0.
+        pip install pyarrow~=4.0.0 --no-deps
+        ;https://pandas.pydata.org/pandas-docs/version/1.2/getting_started/install.html#dependencies
+        ;Building pandas with no dependencies because NumPy 1.16.5 is not supported on
+        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
+        ;1.20 to avoid the issue, and is compatible with pandas 1.2.
+        pip install pandas~=1.2.4 --no-deps
+        ;https://docs.scipy.org/doc/scipy/dev/toolchain.html#numpy
+        ;Building scipy with no dependencies because NumPy 1.16.5 is not supported on
+        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
+        ;1.20 to avoid the issue, and is compatible with scipy.1.6.
+        pip install scipy~=1.6.2 --no-deps
+    else
+        pip install -r requirements/{envname}.txt
+    fi
     coverage erase
     coverage run -m unittest discover -s tests -p '*_tests.py'
 
