--- a/python/tox.ini
+++ b/python/tox.ini
@@ -38,22 +38,14 @@ commands =
     echo "System Architecture: $sys_arch"
     # Check if the architecture is arm64
     if [ "sys_arch" = "arm64" ]; then
-        pip install -r requirements/{envname}_arm64.txt
+        ;Building  with no dependencies because NumPy<=1.20 is not supported on
+        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
+        ;1.20 to avoid the issue, and is compatible with the other dependencies.
         ;https://github.com/apache/arrow/blob/release-4.0.0/python/requirements-wheel-build.txt
-        ;Building pyarrow with no dependencies because NumPy 1.16.5 is not supported on
-        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
-        ;1.20 to avoid the issue, and is compatible with pyarrow 4.0.
-        pip install pyarrow~=4.0.0 --no-deps
         ;https://pandas.pydata.org/pandas-docs/version/1.2/getting_started/install.html#dependencies
-        ;Building pandas with no dependencies because NumPy 1.16.5 is not supported on
-        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
-        ;1.20 to avoid the issue, and is compatible with pandas 1.2.
-        pip install pandas~=1.2.4 --no-deps
         ;https://docs.scipy.org/doc/scipy/dev/toolchain.html#numpy
-        ;Building scipy with no dependencies because NumPy 1.16.5 is not supported on
-        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
-        ;1.20 to avoid the issue, and is compatible with scipy.1.6.
-        pip install scipy~=1.6.2 --no-deps
+        ;NB: Installation order matters in the requirements file
+        pip install --no-deps -r requirements/{envname}_${sys_arch}.txt
     else
         pip install -r requirements/{envname}.txt
     fi
