simplify shell for dbr104 setup

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -30,25 +30,16 @@ commands =
     coverage run -m unittest discover -s tests -p '*_tests.py'
 
 [testenv:dbr104]
+allowlist_externals = bash
+commands_pre =
+   bash -c "./requirements/{envname}/set_install_command.sh"
+install_command =
+    bash -c "cat requirements/{envname}/install_cmd.txt"
 deps =
     -rrequirements/dev.txt
+    ;NB: dependency order matters for this env
+    -rrequirements/{envname}/{envname}.txt
 commands =
-    # Get the architecture of the system
-    sys_arch=$(uname -m)
-    echo "System Architecture: $sys_arch"
-    # Check if the architecture is arm64
-    if [ "sys_arch" = "arm64" ]; then
-        ;Building  with no dependencies because NumPy<=1.20 is not supported on
-        ;MacOS with arm64 arch. The Numpy version is pinned in the requirements.txt to
-        ;1.20 to avoid the issue, and is compatible with the other dependencies.
-        ;https://github.com/apache/arrow/blob/release-4.0.0/python/requirements-wheel-build.txt
-        ;https://pandas.pydata.org/pandas-docs/version/1.2/getting_started/install.html#dependencies
-        ;https://docs.scipy.org/doc/scipy/dev/toolchain.html#numpy
-        ;NB: Installation order matters in the requirements file
-        pip install --no-deps -r requirements/{envname}_${sys_arch}.txt
-    else
-        pip install -r requirements/{envname}.txt
-    fi
     coverage erase
     coverage run -m unittest discover -s tests -p '*_tests.py'
 
