no build deps for packages that need numpy

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -30,16 +30,12 @@ commands =
     coverage run -m unittest discover -s tests -p '*_tests.py'
 
 [testenv:dbr104]
-allowlist_externals = bash
-commands_pre =
-   bash -c "./requirements/{envname}/set_install_command.sh"
-install_command =
-    bash -c "cat requirements/{envname}/install_cmd.txt"
+allowlist_externals = chmod, bash, source
 deps =
     -rrequirements/dev.txt
-    ;NB: dependency order matters for this env
-    -rrequirements/{envname}/{envname}.txt
 commands =
+    chmod +x ./requirements/dbr104/install_non_dev_dependencies.sh
+    source ./requirements/dbr104/install_non_dev_dependencies.sh
     coverage erase
     coverage run -m unittest discover -s tests -p '*_tests.py'
 
