--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize]
   push:
-    branches: ['*'] # FIXME
+    branches: ['master']
 
 jobs:
   release:
@@ -35,7 +35,7 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.LABS_PYPI_TOKEN }}
-          packages_dir: python/dist/
+          packages-dir: python/dist/
   
   docs:
     runs-on: ubuntu-latest
