--- a/python/tox.ini
+++ b/python/tox.ini
@@ -36,7 +36,7 @@ deps =
     flake8
     black==24.4.1
 commands =
-    black {posargs} {toxinidir}/tempo
+    black --check --verbose {posargs} {toxinidir}/tempo
     flake8 --config {toxinidir}/.flake8 {toxinidir}/tempo
 
 [testenv:type-check]
