adjust build release to only trigger when tag is pushed to master

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,10 +1,11 @@
 name: build-release
 
 on:
-  pull_request:
-    types: [opened, synchronize]
   push:
-    branches: ['master']
+    branches:
+      - master
+    tags:
+      - 'v*' # only release a versioned tag, such as v.X.Y.Z
 
 jobs:
   release:
