Revert "adjust build release to only trigger when tag is pushed to master"
This reverts commit 1ac339178244751ef9ec38475dfd8691c49f3445.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,11 +1,10 @@
 name: build-release
 
 on:
+  pull_request:
+    types: [opened, synchronize]
   push:
-    branches:
-      - master
-    tags:
-      - 'v*' # only release a versioned tag, such as v.X.Y.Z
+    branches: ['master']
 
 jobs:
   release:
