--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,78 +1,108 @@
-name: build
+name: test
 
 on:
-  push:
-    branches: [ '*' ]
   pull_request:
-    branches: [ 'master' ]
+    types: [opened, synchronize]
+  push:
+    branches: ['master']
+  workflow_dispatch: 
 
 jobs:
-  black-linting:
+  lint-and-check:
     runs-on: ubuntu-latest
-    name: Black Lint
     steps:
-      - uses: actions/checkout@v2
-      - uses: psf/black@stable
-        with:
-          options: "--check --verbose"
-          src: "./python"
-          version: "23.3.0"
-  flake8-lint:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        fetch-tags: true
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install tox tox-gh-actions
+    - name: Execute tox envs
+      working-directory: ./python
+      run: tox -e lint -- --check --diff
+    - name: Execute tox envs
+      working-directory: ./python
+      run: tox -e type-check
+  
+  analyze:
     runs-on: ubuntu-latest
-    name: Flake8 Lint
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'python' ]
+        # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
+        # Learn more about CodeQL language support at https://git.io/codeql-language-support
     steps:
-      - name: Check out source repository
-        uses: actions/checkout@v2
-      - name: Set up Python environment
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: flake8 Lint
-        uses: py-actions/flake8@v2
-        with:
-          args: "--config python/.flake8"
-          path: "./python"
-  type-checks:
-    runs-on: ubuntu-latest
-    name: Type Checks
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Type check
-        working-directory: ./python
-        run: |
-          pip install tox
-          tox -e type-check
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    # Initializes the CodeQL tools for scanning.
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+      with:
+        languages: ${{ matrix.language }}
+        # If you wish to specify custom queries, you can do so here or in a config file.
+        # By default, queries listed here will override any specified in a config file.
+        # Prefix the list here with "+" to use these queries and those in the config file.
+        # queries: ./path/to/local/query, your-org/your-repo/queries@main
+    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
+    # If this step fails, then you should remove it and run the build manually (see below)
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v3
+    # ℹ️ Command-line programs to run using the OS shell.
+    # 📚 https://git.io/JvXDl
+    # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
+    #    and modify them (or add more) to build your code if your project
+    #    uses a compiled language
+    #- run: |
+    #   make bootstrap
+    #   make release
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v3
+
   test:
-    name: Build and Test Module
-    runs-on: ${{ matrix.os }}
+    needs: lint-and-check
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
-    env:
-      OS: ${{ matrix.os }}
-      PYTHON: '3.9'
+        config:
+          - py: '3.9'
+            dbr: dbr113
+          - py: '3.9'
+            dbr: dbr122
+          - py: '3.10'
+            dbr: dbr133
+          - py: '3.10'
+            dbr: dbr143
+      fail-fast: false
     steps:
-    - uses: actions/checkout@master
-    - name: Setup Python
-      uses: actions/setup-python@master
+    - uses: actions/checkout@v4
       with:
-        python-version: 3.9
-    - name: Set Spark env
+        fetch-depth: 0
+        fetch-tags: true
+    - name: Set up Python ${{ matrix.config.py }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.config.py }}
+    - name: Install dependencies
       run: |
-        export SPARK_LOCAL_IP=127.0.0.1
-        export SPARK_SUBMIT_OPTS="--illegal-access=permit -Dio.netty.tryReflectionSetAccessible=true"
-    - name: Generate coverage report
+        python -m pip install --upgrade pip
+        python -m pip install tox
+    - name: Execute tox envs
       working-directory: ./python
-      run: |
-        python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
-        coverage run -m unittest discover -s tests -p '*_tests.py'
-        coverage combine
-        coverage xml
+      run: tox -e ${{ matrix.config.dbr }},coverage-report
     - name: Publish test coverage
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
           fail_ci_if_error: true
           files: ./python/coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
