--- a/python/tox.ini
+++ b/python/tox.ini
@@ -2,20 +2,13 @@
 requires =
     tox>4,<5
     virtualenv>20,<21
-    wheel>=0.38,<1
-isolated_build = true
+isolated_build = True
 envlist =
-    format
-    lint
-    type-check
-    build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
-    py37-pyspark300,
-    py38-pyspark{312,321},
-    py39-pyspark{330,332}
+    dbr{113,122,133,143}
+    coverage-report
 skip_missing_interpreters = true
-
 
 [testenv]
 description = run the tests under {envname}
@@ -23,26 +16,17 @@ package = wheel
 wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}
+basepython =    
+    dbr143: py310
+    dbr133: py310
+    dbr122: py39
+    dbr113: py39
 deps =
-    pyspark300: pyspark==3.0.0
-    pyspark312: pyspark==3.1.2
-    pyspark321: pyspark==3.2.1
-    pyspark330: pyspark==3.3.0
-    pyspark332: pyspark==3.3.2
-    coverage>=7,<8
-    -rrequirements.txt
+    -rrequirements/dev.txt
+    -rrequirements/{envname}.txt
 commands =
-    coverage --version
+    coverage erase
     coverage run -m unittest discover -s tests -p '*_tests.py'
-
-[testenv:format]
-description = run formatters
-skipsdist = true
-skip_install = true
-deps =
-    black
-commands =
-    black {toxinidir}
 
 [testenv:lint]
 description = run linters
@@ -50,9 +34,9 @@ skipsdist = true
 skip_install = true
 deps =
     flake8
-    black
+    black==24.4.1
 commands =
-    black --check {toxinidir}/tempo
+    black {posargs} {toxinidir}/tempo
     flake8 --config {toxinidir}/.flake8 {toxinidir}/tempo
 
 [testenv:type-check]
@@ -62,24 +46,28 @@ skip_install = true
 deps =
     mypy>=1,<2
     pandas-stubs>=2,<3
-    types-pytz>=2023,<2024
-    -rrequirements.txt
+    numpy
+    types-openpyxl
 commands =
-    mypy {toxinidir}/tempo
+    mypy --install-types {toxinidir}/tempo
 
 [testenv:build-dist]
 description = build distribution
 skip_install = true
 deps =
     build
+    semver
 commands =
-    python -m build --sdist --wheel {posargs: {toxinidir}}
+    python setup.py clean bdist_wheel
 
-[testenv:cov-init]
-setenv =
-    COVERAGE_FILE = .coverage
+[testenv:build-docs]
+description = build distribution
+allowlist_externals = make
+deps =
+    -r ../docs/requirements.txt
+    semver
 commands =
-    coverage erase
+    make --directory ../docs html
 
 [testenv:coverage-report]
 description = combine coverage data and generate reports
@@ -89,7 +77,6 @@ skip_install = true
 setenv =
     COVERAGE_FILE = .coverage
 commands =
-    coverage --version
     coverage combine
     coverage report -m
     coverage xml
