--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches: ['master']
     paths:
-      - 'docs/**'  # Trigger only when files inside docs folder are changed
+      - 'docs/**'  # Trigger when files inside docs folder are changed
+  pull_request:
+    paths:
+      - 'docs/**'  # Trigger when docs are changed within a pull request
+  workflow_dispatch:  # Allow manual triggering of the workflow
+
 
 jobs:
   docs:
