--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -43,7 +43,8 @@ jobs:
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
-        if: startsWith(github.ref, 'refs/tags/v')
+        # Deploy to the gh-pages branch when a tag is pushed or the workflow is manually triggered
+        if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html
