--- a/.github/workflows/dist-releasae.yml
+++ b/.github/workflows/dist-releasae.yml
@@ -1,10 +1,16 @@
-name: build-release
+name: dist-release
 
 on:
   pull_request:
     types: [opened, synchronize]
+    paths-ignore:
+      - 'docs/**'  # Ignore changes in the docs folder for pull requests
+      - '.github'  # Ignore changes in the .github folder for pull requests
   push:
     branches: ['master']
+    paths-ignore:
+      - 'docs/**'  # Ignore changes in the docs folder for pushes
+      - '.github'  # Ignore changes in the .github folder for pushes
 
 jobs:
   release:
@@ -41,38 +47,3 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         with:
           packages-dir: python/dist/
-  
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install tox
-
-      - name: Build docs
-        working-directory: ./python
-        run: tox -e build-docs
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: html-docs
-          path: docs/_build/html/
-
-      - name: Deploy 🚀
-        uses: peaceiris/actions-gh-pages@v3
-        if: startsWith(github.ref, 'refs/tags/v')
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/html
