mypy should run in non-interactive mode

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -50,7 +50,7 @@ deps =
     numpy
     types-openpyxl
 commands =
-    mypy --install-types {toxinidir}/tempo
+    mypy --install-types --non-interactive {toxinidir}/tempo
 
 [testenv:build-dist]
 description = build distribution
