--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
-    - name: Execute tox envs
+    - name: Lint check
       working-directory: ./python
       run: tox -e lint -- --check --diff
-    - name: Execute tox envs
+    - name: Type check
       working-directory: ./python
       run: tox -e type-check
   
