update tox conf to support unittest and pytest

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,11 +11,11 @@ envlist =
 skip_missing_interpreters = true
 
 [testenv]
-description = run the tests under {envname}
+description = run unittest and pytest under {envname}
 package = wheel
 wheel_build_env = .pkg
 setenv =
-    COVERAGE_FILE = .coverage.{envname}
+    COVERAGE_FILE = .coverage.{envname}.unittest
 basepython =
     dbr154: py311
     dbr143: py310
@@ -25,9 +25,34 @@ basepython =
 deps =
     -rrequirements/dev.txt
     -rrequirements/{envname}.txt
+    pytest>=7.0.0
+    pytest-cov
+commands =
+    ; Run unittest with coverage and show detailed output
+    coverage erase
+    python -m unittest discover -s tests -p '*_tests.py' -v
+    coverage run -m unittest discover -s tests -p '*_tests.py'
+    ; Run pytest with coverage to the same file (appending)
+    coverage run --append -m pytest tests/ -v --ignore=__pycache__
+
+[testenv:pytest-only]
+description = run only pytest tests under {envname}
+package = wheel
+wheel_build_env = .pkg
+setenv =
+    COVERAGE_FILE = .coverage.{envname}.pytest
+basepython =
+    dbr154: py311
+    dbr143: py310
+    dbr133: py310
+    dbr122: py39
+    dbr113: py39
+deps =
+    {[testenv]deps}
 commands =
     coverage erase
-    coverage run -m unittest discover -s tests -p '*_tests.py'
+    python -m pytest tests/ -v --ignore=__pycache__
+    coverage run -m pytest tests/ -v --ignore=__pycache__
 
 [testenv:lint]
 description = run linters
