adding 3.11 to docs, and updating create-env in makefile to install all necessary python versions

--- a/python/Makefile
+++ b/python/Makefile
@@ -32,9 +32,11 @@ help:
 
 # Create virtual environment if it doesn't exist
 # Ensure the virtual environment is created
-.PHONY: venv
+.PHONY: create-env
 venv:
 	@echo "Creating virtual environment for DBR $(DBR)..."
+	pyenv install 3.8 3.9 3.10 3.11
+	pyenv local 3.8 3.9 3.10 3.11
 	tox --devenv .venv -e dbr${DBR}
 
 # Run specific environment testtests
