--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build docs
         working-directory: ./python
-        run: tox -e build-docs
+        run: make build-docs
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
