Update Makefile to conditionally install Python versions
Modified the `venv` target to check for existing Python versions before installing them. This prevents redundant installations and ensures only missing versions are installed via `pyenv`.

--- a/python/Makefile
+++ b/python/Makefile
@@ -47,7 +47,9 @@ help:
 .PHONY: create-env
 venv:
 	@echo "Creating virtual environment for DBR $(DBR)..."
-	pyenv install 3.9 3.10 3.11
+	@(pyenv versions | grep -q " 3.9" || (echo "Installing Python 3.9..." && pyenv install 3.9))
+	@(pyenv versions | grep -q " 3.10" || (echo "Installing Python 3.10..." && pyenv install 3.10))
+	@(pyenv versions | grep -q " 3.11" || (echo "Installing Python 3.11..." && pyenv install 3.11))
 	pyenv local 3.9 3.10 3.11
 	tox --devenv .venv -e dbr${DBR}
 
