Fix typo in Makefile target comment
Corrected a misspelling in the comment for the `test` target. Changed "testtests" to "tests" for improved clarity and professionalism.

--- a/python/Makefile
+++ b/python/Makefile
@@ -53,7 +53,7 @@ venv:
 	pyenv local 3.9 3.10 3.11
 	tox --devenv $(VENV) -e dbr${DBR}
 
-# Run specific environment testtests
+# Run specific environment tests
 .PHONY: test
 test:
 	@echo "Running tests in DBR $(DBR)..."
