--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox
+          python -m pip install hatch
 
       - name: Build docs
         working-directory: ./python
