adding get_version to version.py for hatch environment creation

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -27,8 +27,11 @@ classifiers = [
 ]
 dependencies = []
 
+
 [tool.hatch.version]
+source = "code"
 path = "./version.py"
+
 
 [project.urls]
 Documentation = "https://databrickslabs.github.io/tempo/"
